Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <th>2017 estimate</th>
       </tr>
       <tr>
-        <th>New York</th>
+        <td>New York</td>
       </tr>
       <tr></tr>
       <tr></tr>
