--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
         <td>New York</td>
         <td>8,622,698</td>
       </tr>
-      <tr></tr>
+      <tr>
+        <td>California</td>
+        <td>California</td>
+        <td>8,622,698</td>
+      </tr>
       <tr></tr>
       <tr></tr>
     </table>
