--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <td>2,716,450</td>
       </tr>
       <tr>
-        <td>Chicago</td>
-        <td>Illinois</td>
+        <td>Houston</td>
+        <td>Texas</td>
         <td>2,716,450</td>
       </tr>
     </table>
